# 418-finalproject

./: .gitignore  LICENSE  Makefile  README.md
ibl/: .gitignore  Makefile  README.md  blur_cube.cpp  hdr_to_cube.cpp
renderer/: CMakeLists.txt  Cubemap.cpp  Cubemap.cu  Cubemap.h  CudaPrimitive.cu  CudaPrimitive.h  CudaScene.cu  CudaScene.h  Makefile  Primitive.cpp  Primitive.h  RefPrimitive.cpp  RefPrimitive.h  RefScene.cpp  RefScene.h  Scene.cpp  Scene.h  benchmark.cpp  circleRenderer.h  cudaRenderer.cu  cudaRenderer.h  cuda_constants.h  cuda_error.h  display.cpp  main.cpp  platformgl.h  refRenderer.cpp  refRenderer.h  renderer.h  sceneLoader.cpp  sceneLoader.h
renderer/include/glm/ext/: matrix_clip_space.inl
